After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 701373 - user-accounts: avoid problems with automatic login
user-accounts: avoid problems with automatic login
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
unspecified
Other All
: Normal normal
: ---
Assigned To: Ondrej Holy
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-05-31 16:14 UTC by Thomas Wood
Modified: 2013-06-05 15:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
user-accounts: avoid problems with automatic login (2.33 KB, patch)
2013-05-31 16:14 UTC, Thomas Wood
none Details | Review
user-accounts: avoid problems with automatic login (3.48 KB, patch)
2013-06-04 13:53 UTC, Thomas Wood
committed Details | Review

Description Thomas Wood 2013-05-31 16:14:34 UTC
Prevent an account from being set to automatically logged in if it is
disabled or requires the password to be changed at next login.
Comment 1 Thomas Wood 2013-05-31 16:14:37 UTC
Created attachment 245756 [details] [review]
user-accounts: avoid problems with automatic login

Prevent an account from being set to automatically logged in if it is
disabled or requires the password to be changed at next login.
Comment 2 Thomas Wood 2013-06-04 13:53:24 UTC
Created attachment 246006 [details] [review]
user-accounts: avoid problems with automatic login

Prevent an account from being set to automatically logged in if it is
disabled or requires the password to be changed at next login.
Comment 3 Thomas Wood 2013-06-04 13:55:41 UTC
Updated patch fixes automatic login switch sensitivity issues.
Comment 4 Thomas Wood 2013-06-05 15:51:57 UTC
Attachment 246006 [details] pushed as b906d32 - user-accounts: avoid problems with automatic login