user-accounts: avoid problems with automatic login

Prevent an account from being set to automatically logged in if it is
disabled or requires the password to be changed at next login.

https://bugzilla.gnome.org/show_bug.cgi?id=701373